@@ -1,5 +1,12 @@
 2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>
 
+	Fixes #330674
+	* calendar/e-cal-backend-exchange-calendar.c:
+	(receive_objects): Passed ECalComponentId for notifying
+	clients on objects removed.
+
+2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>
+
 	Fixes #334900
 	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects):
 	Do not remove the instance as exception would be set in the method
